JWT認証用にopenapi.yml更新＆コントローラー作成
