# src/apps/backend/src/OpenApiGenerator/src/Org.OpenAPITools/Models/UserLoginRequestDto.cs
@@ -1,0 +1,139 @@
+/*
+ * ToDo Application API
+ *
+ * ToDoアプリのAPI設計
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ * Generated by: https://openapi-generator.tech
+ */
+
+using System;
+using System.Linq;
+using System.Text;
+using System.Collections.Generic;
+using System.ComponentModel;
+using System.ComponentModel.DataAnnotations;
+using System.Runtime.Serialization;
+using Newtonsoft.Json;
+using Org.OpenAPITools.Converters;
+
+namespace Org.OpenAPITools.Models
+{ 
+    /// <summary>
+    /// 
+    /// </summary>
+    [DataContract]
+    public class UserLoginRequestDto : IEquatable<UserLoginRequestDto>
+    {
+        /// <summary>
+        /// ユーザーのメールアドレス
+        /// </summary>
+        /// <value>ユーザーのメールアドレス</value>
+        /* <example>john.doe@example.com</example> */
+        [Required]
+        [DataMember(Name="email", EmitDefaultValue=false)]
+        public string Email { get; set; }
+
+        /// <summary>
+        /// ユーザーのパスワード
+        /// </summary>
+        /// <value>ユーザーのパスワード</value>
+        /* <example>strongpassword123</example> */
+        [Required]
+        [DataMember(Name="password", EmitDefaultValue=false)]
+        public string Password { get; set; }
+
+        /// <summary>
+        /// Returns the string presentation of the object
+        /// </summary>
+        /// <returns>String presentation of the object</returns>
+        public override string ToString()
+        {
+            var sb = new StringBuilder();
+            sb.Append("class UserLoginRequestDto {\n");
+            sb.Append("  Email: ").Append(Email).Append("\n");
+            sb.Append("  Password: ").Append(Password).Append("\n");
+            sb.Append("}\n");
+            return sb.ToString();
+        }
+
+        /// <summary>
+        /// Returns the JSON string presentation of the object
+        /// </summary>
+        /// <returns>JSON string presentation of the object</returns>
+        public string ToJson()
+        {
+            return JsonConvert.SerializeObject(this, Formatting.Indented);
+        }
+
+        /// <summary>
+        /// Returns true if objects are equal
+        /// </summary>
+        /// <param name="obj">Object to be compared</param>
+        /// <returns>Boolean</returns>
+        public override bool Equals(object obj)
+        {
+            if (obj is null) return false;
+            if (ReferenceEquals(this, obj)) return true;
+            return obj.GetType() == GetType() && Equals((UserLoginRequestDto)obj);
+        }
+
+        /// <summary>
+        /// Returns true if UserLoginRequestDto instances are equal
+        /// </summary>
+        /// <param name="other">Instance of UserLoginRequestDto to be compared</param>
+        /// <returns>Boolean</returns>
+        public bool Equals(UserLoginRequestDto other)
+        {
+            if (other is null) return false;
+            if (ReferenceEquals(this, other)) return true;
+
+            return 
+                (
+                    Email == other.Email ||
+                    Email != null &&
+                    Email.Equals(other.Email)
+                ) && 
+                (
+                    Password == other.Password ||
+                    Password != null &&
+                    Password.Equals(other.Password)
+                );
+        }
+
+        /// <summary>
+        /// Gets the hash code
+        /// </summary>
+        /// <returns>Hash code</returns>
+        public override int GetHashCode()
+        {
+            unchecked // Overflow is fine, just wrap
+            {
+                var hashCode = 41;
+                // Suitable nullity checks etc, of course :)
+                    if (Email != null)
+                    hashCode = hashCode * 59 + Email.GetHashCode();
+                    if (Password != null)
+                    hashCode = hashCode * 59 + Password.GetHashCode();
+                return hashCode;
+            }
+        }
+
+        #region Operators
+        #pragma warning disable 1591
+
+        public static bool operator ==(UserLoginRequestDto left, UserLoginRequestDto right)
+        {
+            return Equals(left, right);
+        }
+
+        public static bool operator !=(UserLoginRequestDto left, UserLoginRequestDto right)
+        {
+            return !Equals(left, right);
+        }
+
+        #pragma warning restore 1591
+        #endregion Operators
+    }
+}
