# src/apps/backend/src/OpenApiGenerator/src/Org.OpenAPITools/Models/UserLoginResponseDto.cs
@@ -1,0 +1,153 @@
+/*
+ * ToDo Application API
+ *
+ * ToDoアプリのAPI設計
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ * Generated by: https://openapi-generator.tech
+ */
+
+using System;
+using System.Linq;
+using System.Text;
+using System.Collections.Generic;
+using System.ComponentModel;
+using System.ComponentModel.DataAnnotations;
+using System.Runtime.Serialization;
+using Newtonsoft.Json;
+using Org.OpenAPITools.Converters;
+
+namespace Org.OpenAPITools.Models
+{ 
+    /// <summary>
+    /// 
+    /// </summary>
+    [DataContract]
+    public class UserLoginResponseDto : IEquatable<UserLoginResponseDto>
+    {
+        /// <summary>
+        /// ユーザーのUUID
+        /// </summary>
+        /// <value>ユーザーのUUID</value>
+        [Required]
+        [DataMember(Name="id", EmitDefaultValue=true)]
+        public Guid Id { get; set; }
+
+        /// <summary>
+        /// ユーザーのメールアドレス
+        /// </summary>
+        /// <value>ユーザーのメールアドレス</value>
+        [Required]
+        [DataMember(Name="email", EmitDefaultValue=false)]
+        public string Email { get; set; }
+
+        /// <summary>
+        /// アクセストークン
+        /// </summary>
+        /// <value>アクセストークン</value>
+        [Required]
+        [DataMember(Name="accessToken", EmitDefaultValue=false)]
+        public string AccessToken { get; set; }
+
+        /// <summary>
+        /// Returns the string presentation of the object
+        /// </summary>
+        /// <returns>String presentation of the object</returns>
+        public override string ToString()
+        {
+            var sb = new StringBuilder();
+            sb.Append("class UserLoginResponseDto {\n");
+            sb.Append("  Id: ").Append(Id).Append("\n");
+            sb.Append("  Email: ").Append(Email).Append("\n");
+            sb.Append("  AccessToken: ").Append(AccessToken).Append("\n");
+            sb.Append("}\n");
+            return sb.ToString();
+        }
+
+        /// <summary>
+        /// Returns the JSON string presentation of the object
+        /// </summary>
+        /// <returns>JSON string presentation of the object</returns>
+        public string ToJson()
+        {
+            return JsonConvert.SerializeObject(this, Formatting.Indented);
+        }
+
+        /// <summary>
+        /// Returns true if objects are equal
+        /// </summary>
+        /// <param name="obj">Object to be compared</param>
+        /// <returns>Boolean</returns>
+        public override bool Equals(object obj)
+        {
+            if (obj is null) return false;
+            if (ReferenceEquals(this, obj)) return true;
+            return obj.GetType() == GetType() && Equals((UserLoginResponseDto)obj);
+        }
+
+        /// <summary>
+        /// Returns true if UserLoginResponseDto instances are equal
+        /// </summary>
+        /// <param name="other">Instance of UserLoginResponseDto to be compared</param>
+        /// <returns>Boolean</returns>
+        public bool Equals(UserLoginResponseDto other)
+        {
+            if (other is null) return false;
+            if (ReferenceEquals(this, other)) return true;
+
+            return 
+                (
+                    Id == other.Id ||
+                    
+                    Id.Equals(other.Id)
+                ) && 
+                (
+                    Email == other.Email ||
+                    Email != null &&
+                    Email.Equals(other.Email)
+                ) && 
+                (
+                    AccessToken == other.AccessToken ||
+                    AccessToken != null &&
+                    AccessToken.Equals(other.AccessToken)
+                );
+        }
+
+        /// <summary>
+        /// Gets the hash code
+        /// </summary>
+        /// <returns>Hash code</returns>
+        public override int GetHashCode()
+        {
+            unchecked // Overflow is fine, just wrap
+            {
+                var hashCode = 41;
+                // Suitable nullity checks etc, of course :)
+                    
+                    hashCode = hashCode * 59 + Id.GetHashCode();
+                    if (Email != null)
+                    hashCode = hashCode * 59 + Email.GetHashCode();
+                    if (AccessToken != null)
+                    hashCode = hashCode * 59 + AccessToken.GetHashCode();
+                return hashCode;
+            }
+        }
+
+        #region Operators
+        #pragma warning disable 1591
+
+        public static bool operator ==(UserLoginResponseDto left, UserLoginResponseDto right)
+        {
+            return Equals(left, right);
+        }
+
+        public static bool operator !=(UserLoginResponseDto left, UserLoginResponseDto right)
+        {
+            return !Equals(left, right);
+        }
+
+        #pragma warning restore 1591
+        #endregion Operators
+    }
+}
